--- a/styles/sass/base/_list.scss
+++ b/styles/sass/base/_list.scss
@@ -1,7 +1,3 @@
-ul {
-    padding: 0;
-}
-
 .cs-inline-list {
     list-style: none;
     margin: 0;
