--- a/styles/sass/components/_content-filter.scss
+++ b/styles/sass/components/_content-filter.scss
@@ -60,6 +60,8 @@
     z-index: 10;
 
     ul {
+        padding-left: 0;
+
         li {
             display: flex;
             flex-direction: row;
@@ -71,7 +73,7 @@
                 color: $filter-link-color;
                 display: flex;
                 flex-direction: row;
-                padding: .5rem;
+                padding: .5rem 1rem;
                 width: 100%;
 
                 &:hover,
